--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
 
     <Window.Resources>
         <classlibrary:V2MainCollection x:Key="MainCollection"/>
-        <local:AvgToStr x:Key="CAvgToStr"/>
+        <local:MinMaxToStr x:Key="CMinMaxToStr"/>
         <CollectionViewSource Source="{DynamicResource MainCollection}" x:Key="DataCollection" Filter="FilterDataCollection"/>
         <CollectionViewSource Source="{DynamicResource MainCollection}" x:Key="DataOnGrid" Filter="FilterDataOnGrid"/>
     </Window.Resources>
@@ -20,7 +20,7 @@
             <RowDefinition Height="45"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Menu>
+        <Menu Grid.Row="0">
             <MenuItem Header="File" Height="45" Width="75">
                 <MenuItem Header="New" HorizontalAlignment="Left" Height="40" Click="NewClick"/>
                 <MenuItem Header="Open" HorizontalAlignment="Left" Height="40" Click="OpenClick"/>
@@ -39,56 +39,69 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
-            <Grid ShowGridLines="True" Grid.Row="0" Grid.Column="0">
+            <Grid ShowGridLines="True" Grid.Column="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
-                    <RowDefinition Height="4*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
-                <TextBlock HorizontalAlignment="Stretch" Margin="5,5,5,5" Text="Элементы в V2MainCollection" TextWrapping="Wrap" VerticalAlignment="Stretch" Grid.Row="0"/>
-                <ListBox Name="listBox_Main" ItemsSource="{DynamicResource MainCollection}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,46,50,46" Grid.Row="1"/>
+                <Grid Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="4*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Left" Margin="48,22,48,22" Text="Элементы в V2DataCollection" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="0"/>
+                    <ListBox Name="listBox_Main" ItemsSource="{DynamicResource MainCollection}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,23,50,23" Grid.Row="1"/>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="4*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Left" Margin="48,22,48,22" Text="Элементы в V2DataCollection" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="0"/>
+                    <ListBox Name="listBox_DataCollection" ItemsSource="{Binding Source={StaticResource DataCollection}}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,23,50,23" Grid.Row="1"/>
+                </Grid>
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="4*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Left" Margin="48,22,48,22" Text="Элементы в V2DataOnGrid" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="0"/>
+                    <ListBox Name="lisBox_DataOnGrid" ItemsSource="{Binding Source={StaticResource DataOnGrid}}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,23,50,23" Grid.Row="1"/>
+                </Grid>
             </Grid>
-            <Grid ShowGridLines="True" Grid.Row="0" Grid.Column="1" >
+            <Grid ShowGridLines="True" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
-                    <RowDefinition Height="4*"/>
-                </Grid.RowDefinitions>
-                <TextBlock HorizontalAlignment="Stretch" Margin="5,5,5,5" Text="Элементы в V2DataCollection" TextWrapping="Wrap" VerticalAlignment="Stretch" Grid.Row="0"/>
-                <ListBox Name="listBox_DataCollection" ItemsSource="{Binding Source={StaticResource DataCollection}}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,46,50,46" Grid.Row="1"/>
-            </Grid>
-            <Grid ShowGridLines="True" Grid.Row="1" Grid.Column="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
                 <Grid ShowGridLines="True" Grid.Row="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="331*"/>
+                        <ColumnDefinition Width="419*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock HorizontalAlignment="Stretch" Margin="5,5,5,5" Text="Среднее значение модуля поля для всех результатов измерений:" TextWrapping="Wrap" VerticalAlignment="Stretch"  Grid.Column="0"/>
-                    <TextBlock Name="tb_Averege" DataContext="{DynamicResource MainCollection}" Text="{Binding Path=Averege, Converter={StaticResource CAvgToStr}, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" HorizontalAlignment="Stretch" Margin="5,5,5,5" VerticalAlignment="Stretch" Grid.Column="1"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="20,22,48,20" Text="Среднее значение модуля поля для всех результатов измерений:" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBlock Name="textBlock_Average" HorizontalAlignment="Left" Margin="20,22,20,22" DataContext="{DynamicResource MainCollection}" Text="{Binding Path=Averege, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="1"/>
                 </Grid>
-                <Grid ShowGridLines="True" Grid.Row="1">
+                <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
-                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="4*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock HorizontalAlignment="Stretch" Margin="5,5,5,5" Text="Элементы в V2DataCollection" TextWrapping="Wrap" VerticalAlignment="Stretch" Grid.Row="0"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="48,22,48,22" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="0"/>
                     <ListBox Name="listBox_details"  DataContext="{Binding ElementName=listBox_DataCollection, Path=SelectedItem}" ItemsSource="{Binding Path=Values_field}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,23,50,23" Grid.Row="1"/>
                 </Grid>
-            </Grid>
-            <Grid ShowGridLines="True" Grid.Row="1" Grid.Column="1" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="4*"/>
-                </Grid.RowDefinitions>
-                <TextBlock HorizontalAlignment="Stretch" Margin="5,5,5,5" Text="Элементы в V2DataOnGrid" TextWrapping="Wrap" VerticalAlignment="Stretch"  Grid.Row="0"/>
-                <ListBox Name="lisBox_DataOnGrid" ItemsSource="{Binding Source={StaticResource DataOnGrid}}" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="50,46,50,46" Grid.Row="1"/>
+                <Grid Grid.Row="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="4*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="Left" Margin="48,22,48,22" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="0"/>
+                    <TextBlock Name="textBlock_details" HorizontalAlignment="Left" Margin="48,22,48,22" DataContext="{Binding ElementName=lisBox_DataOnGrid, Path=SelectedItem}" Text="{Binding Path=MinMaxValues, Converter={StaticResource CMinMaxToStr}, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="1"/>
+                </Grid>
             </Grid>
         </Grid>
+
     </Grid>
 </Window>
