--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:labworkUI_1"
         xmlns:classlibrary="clr-namespace:ClassLibrary;assembly=ClassLibrary"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1500">
+        Title="MainWindow" Height="900" Width="1500" Closing="WindowClosing">
 
     <Window.Resources>
         <classlibrary:V2MainCollection x:Key="MainCollection"/>
